--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -61,7 +61,7 @@
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-start mb-2">
                         <h5 class="card-title">
-                            <a href="{% url 'post_detail' post.pk %}" class="text-decoration-none text-dark">
+                            <a href="{% url 'post_detail' post.pk %}" class="text-decoration-none link-body-emphasis">
                                 {{ post.title }}
                             </a>
                         </h5>
