--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -7,8 +7,8 @@
     
     <div class="row mb-4">
         <div class="col-md-8">
-            <h1><i class="bi bi-list-ul"></i> Developer Issues Board</h1>
-            <p class="text-muted">Browse real issues from fellow devs and lend a hand.</p>
+            <h1><i class="bi bi-list-ul"></i> Developer Board</h1>
+            <p class="text-muted" style="margin-left: 3.1rem;">Browse real issues from fellow devs and lend a hand.</p>
         </div>
         <div class="col-md-4 text-end">
             <a href="{% url 'post_create' %}" class="btn btn-primary btn-lg">
