--- a/templates/base.html
+++ b/templates/base.html
@@ -99,6 +99,33 @@
                             <i class="bi bi-house-door"></i> Home
                         </a>
                     </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person-circle"></i> {{ user.get_short_name|default:user.email|default:user.username }}
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="{% url 'account_email' %}"><i class="bi bi-envelope-at"></i> Email settings</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'account_logout' %}">
+                                    <i class="bi bi-box-arrow-right"></i> Logout
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_login' %}">
+                            <i class="bi bi-box-arrow-in-right"></i> Login
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_signup' %}">
+                            <i class="bi bi-person-plus"></i> Sign Up
+                        </a>
+                    </li>
+                    {% endif %}
                     <li class="nav-item d-flex align-items-center ms-2">
                         <button id="theme-toggle" class="btn btn-link p-0" style="color: white !important;" type="button" aria-label="Toggle theme">
                             <i id="theme-toggle-icon" class="bi bi-moon-stars" style="font-size: 1rem; color: white !important;"></i>
