--- a/templates/posts/post_create.html
+++ b/templates/posts/post_create.html
@@ -5,10 +5,10 @@
 {% block content %}
 <div class="container my-5">
     <div class="row justify-content-center">
-        <div class="col-md-8">
+        <div class="col-12 col-lg-8">
             <div class="card shadow">
                 <div class="card-header bg-primary text-white">
-                    <h3 class="mb-0"><i class="bi bi-plus-circle"></i> Post a New Issue</h3>
+                    <h3 class="mb-0 fs-5 fs-md-4"><i class="bi bi-plus-circle"></i> Post a New Issue</h3>
                 </div>
                 <div class="card-body p-4">
                     <p class="text-muted mb-4">
