--- a/templates/posts/post_edit.html
+++ b/templates/posts/post_edit.html
@@ -5,12 +5,12 @@
 {% block content %}
 <div class="container my-5">
     <div class="row justify-content-center">
-        <div class="col-md-8">
+        <div class="col-12 col-lg-8">
             <div class="card shadow">
-                <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
-                    <h3 class="mb-0"><i class="bi bi-pencil-square"></i> Edit Post</h3>
+                <div class="card-header bg-primary text-white d-flex flex-column flex-sm-row justify-content-between align-items-start gap-2">
+                    <h3 class="mb-0 fs-5 fs-md-4"><i class="bi bi-pencil-square"></i> Edit Post</h3>
                     <a href="{% url 'post_detail' post.pk %}" class="btn btn-outline-light btn-sm">
-                        <i class="bi bi-eye"></i> View
+                        <i class="bi bi-eye"></i><span class="d-none d-sm-inline"> View</span>
                     </a>
                 </div>
                 <div class="card-body p-4">
